test/error/MethodBaseNoBase.fu
public class Test
{
	bool Foo() => base.Bar(); //ERROR: No base class

	public static bool Run() => true;
}
